--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -6,12 +6,12 @@
 # Profile Configuration
 # profiles: hsqldb, mysql, batch, docs
 ##
-spring.profiles.active=hsqldb,batch,mongo
+spring.profiles.active=hsqldb,batch,mongo,dev
 
 ##
 # Web Server Configuration
 ##
-server.port=
+server.port=8080
 
 ##
 # Data Source Configuration
